Added web category, updated about me, and added new comic.

--- a/about-me.html
+++ b/about-me.html
@@ -18,23 +18,35 @@
         <div class="nav-main-container">
           <button class="dropdown-btn nav-option">comics</button>
           <div class="dropdown-container">
-            <a class="nav-option" href="cyclux.html">cyclux</a>
-            <a class="nav-option" href="branches.html">branches</a>
+            <a class="nav-option" href="comics/cyclux.html">cyclux</a>
+            <a class="nav-option" href="comics/branches.html">branches</a>
           </div>
           <a class="nav-option" href="illustrations.html">illustrations</a>
           <a class="nav-option" href="photo.html">photo</a>
+          <button class="dropdown-btn nav-option">web</button>
+          <div class="dropdown-container">
+            <a class="nav-option" href="web/arrangewatch.html">arrange and watch</a>
+            <a class="nav-option" href="web/lifesimulator.html">life simulator</a>
+            <a class="nav-option" href="web/crisscross.html">criss cross</a>
+          </div>
           <a class="nav-option" href="about-me.html">about</a>
-        </div>
-
-        <div class="icon-bar">
-          <a class="nav-option" href="https://www.instagram.com/chachoblow"><img src="images/instagram-icon-160.png" width="20"></a>
         </div>
       </nav>
 
       <main class="content">
-        <p>I am currently finishing my last semester at The University of California, Berkeley where I majored in mathematics and minored in computer science. While I originally had hopes of continuing mathematics in graduate school, I am now excited to pursue oppurtunities in software engineering which better fullfil my love for building and making things.</p>
+        <div class="aboutme-content">
+          <img class="aboutme-img" src="images/self.jpg">
+          <h2>about me</h2>
+          <p>Wesley Klein is currently finishing his last semester at The University of California, Berkeley where he majored in mathematics and minored in computer science. He is an artist, maker, builder, and fixer. He is currently seeking oppurtunites within the software engineering field. Specifically, he is interested in virtual reality, agumented reality, creative coding, web design, and in a broad sense, the intersection of art and technology.</p>
+          <p>Apart from his studies, he enjoys making small, alternative comics and illustrations. He is currently learning to animate as well. He is highly interested in merging more traditional artistic endevours, such as, drawing and illustration, with new technologies. He is exploring the ways in which microcontrollers, web technologies, virtual reality, and creative coding frameworks can be merged with alternative comics, animation, and drawing. </p>
+          <div style="padding-top:30px">
+            <a href="images/resume.pdf" title="Download My Resume" class="content-link"><img src="images/cv.png" width="60" style="padding:10px"></a>
+            <a href="https://github.com/chachoblow" title="My Github" class="content-link"><img src="images/github.png" width="60" style="padding:10px"></a>
+            <a href="https://www.linkedin.com/in/wesleyklein/" title="My Linkedin" class="content-link"><img src="images/linkedin.png" width="60" style="padding:10px"></a>
+            <a href="https://www.instagram.com/chachoblow" title="My Instagram" class="content-link"><img src="images/instagram.png" width="60" style="padding:10px"></a>
+          </div>
+        </div>
       </main>
-      <iframe src="https://editor.p5js.org/chachoblow/embed/H1Cb47__Q"></iframe>
       <script src="dropdown.js"></script>
     </body>
 </html>
