--- a/index.html
+++ b/index.html
@@ -18,16 +18,18 @@
         <div class="nav-main-container">
           <button class="dropdown-btn nav-option">comics</button>
           <div class="dropdown-container">
-            <a class="nav-option" href="cyclux.html">cyclux</a>
-            <a class="nav-option" href="branches.html">branches</a>
+            <a class="nav-option" href="comics/cyclux.html">cyclux</a>
+            <a class="nav-option" href="comics/branches.html">branches</a>
           </div>
           <a class="nav-option" href="illustrations.html">illustrations</a>
           <a class="nav-option" href="photo.html">photo</a>
+          <button class="dropdown-btn nav-option">web</button>
+          <div class="dropdown-container">
+            <a class="nav-option" href="web/arrangewatch.html">arrange and watch</a>
+            <a class="nav-option" href="web/lifesimulator.html">life simulator</a>
+            <a class="nav-option" href="web/crisscross.html">criss cross</a>
+          </div>
           <a class="nav-option" href="about-me.html">about</a>
-        </div>
-
-        <div class="icon-bar">
-          <a class="nav-option" href="https://www.instagram.com/chachoblow"><img src="images/instagram-icon-160.png" width="20"></a>
         </div>
       </nav>
 
