--- a/about-me.html
+++ b/about-me.html
@@ -37,7 +37,7 @@
         <div class="aboutme-content">
           <img class="aboutme-img" src="images/self.jpg">
           <h2>about me</h2>
-          <p>Wesley Klein is currently finishing his last semester at The University of California, Berkeley where he majored in mathematics and minored in computer science. He is an artist, maker, builder, and fixer. He is currently seeking oppurtunites within the software engineering field. Specifically, he is interested in virtual reality, agumented reality, creative coding, web design, and in a broad sense, the intersection of art and technology.</p>
+          <p>Wesley Klein is an artist, maker, builder, and fixer. He completed his mathematics and computer science degree at The University of California, Berkeley. He is seeking oppurtunites within the software engineering field. Specifically, he is interested in virtual reality, agumented reality, creative coding, web design, and in a broad sense, the intersection of art and technology.</p>
           <p>Apart from his studies, he enjoys making small, alternative comics and illustrations. He is currently learning to animate as well. He is highly interested in merging more traditional artistic endevours, such as, drawing and illustration, with new technologies. He is exploring the ways in which microcontrollers, web technologies, virtual reality, and creative coding frameworks can be merged with alternative comics, animation, and drawing. </p>
           <div style="padding-top:30px">
             <a href="images/resume.pdf" title="Download My Resume" class="content-link"><img src="images/cv.png" width="60" style="padding:10px"></a>
