--- a/illustrations.html
+++ b/illustrations.html
@@ -32,9 +32,13 @@
           <a class="nav-option" href="about-me.html">about</a>
         </div>
       </nav>
-      
+
       <main class="content">
+        <img class="responsive" src="images/illustrations/can-you-hear-me-1800h.jpg">
+        <img class="responsive" src="images/illustrations/fried-1381h.jpg">
+        <img class="responsive" src="images/illustrations/breaking-bad-1500h.jpg">
         <img class="responsive" src="images/illustrations/bat-person-1080h.png">
+        <img class="responsive" src="images/illustrations/yellow-vision-1800h.jpg">
         <img class="responsive" src="images/illustrations/man-rock-900h.png">
         <img class="responsive" src="images/illustrations/woman-cursive-900h.png">
         <img class="responsive" src="images/illustrations/me-final-1080h.jpg">
