Added 'alt' tags to all images.

--- a/about-me.html
+++ b/about-me.html
@@ -13,7 +13,7 @@
     <body>
       <nav class="sidenav">
         <div class="nav-title-container">
-          <a href="index.html"><img id="title-image" src="images/my-eyes-name.png"></a>
+          <a href="index.html"><img id="title-image" src="images/my-eyes-name.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
         </div>
         <div class="nav-main-container">
           <button class="dropdown-btn nav-option">comics</button>
@@ -35,15 +35,15 @@
 
       <main class="content">
         <div class="aboutme-content">
-          <img class="aboutme-img" src="images/self.jpg">
+          <img class="aboutme-img" src="images/self.jpg" alt="Black and white photograph of Wesley Klein.">
           <h2>about me</h2>
           <p>Wesley Klein is an artist, maker, builder, and fixer. He completed his mathematics and computer science degree at The University of California, Berkeley. He is seeking oppurtunites within the software engineering field. Specifically, he is interested in virtual reality, agumented reality, creative coding, web design, and in a broad sense, the intersection of art and technology.</p>
           <p>Apart from his studies, he enjoys making small, alternative comics and illustrations. He is currently learning to animate as well. He is highly interested in merging more traditional artistic endevours, such as, drawing and illustration, with new technologies. He is exploring the ways in which microcontrollers, web technologies, virtual reality, and creative coding frameworks can be merged with alternative comics, animation, and drawing. </p>
           <div style="padding-top:30px">
-            <a href="images/resume.pdf" title="Download My Resume" class="content-link"><img src="images/cv.png" width="60" style="padding:10px"></a>
-            <a href="https://github.com/chachoblow" title="My Github" class="content-link"><img src="images/github.png" width="60" style="padding:10px"></a>
-            <a href="https://www.linkedin.com/in/wesleyklein/" title="My Linkedin" class="content-link"><img src="images/linkedin.png" width="60" style="padding:10px"></a>
-            <a href="https://www.instagram.com/chachoblow" title="My Instagram" class="content-link"><img src="images/instagram.png" width="60" style="padding:10px"></a>
+            <a href="images/resume.pdf" title="Download My Resume" class="content-link"><img src="images/cv.png" width="60" style="padding:10px" alt="Icon for resume."></a>
+            <a href="https://github.com/chachoblow" title="My Github" class="content-link"><img src="images/github.png" width="60" style="padding:10px" alt="Icon for Github."></a>
+            <a href="https://www.linkedin.com/in/wesleyklein/" title="My Linkedin" class="content-link"><img src="images/linkedin.png" width="60" style="padding:10px" alt="Icon for LinkedIn."></a>
+            <a href="https://www.instagram.com/chachoblow" title="My Instagram" class="content-link"><img src="images/instagram.png" width="60" style="padding:10px" alt="Icon for Instagram."></a>
           </div>
         </div>
       </main>
