--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
     <body>
       <nav class="sidenav">
         <div class="nav-title-container">
-          <a href="index.html"><img id="title-image" src="images/my-eyes-name.png"></a>
+          <a href="index.html"><img id="title-image" src="images/my-eyes-name.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
         </div>
         <div class="nav-main-container">
           <button class="dropdown-btn nav-option">comics</button>
@@ -27,7 +27,7 @@
         </div>
         
         <div class="icon-bar">
-          <a class="nav-option" href="https://www.instagram.com/chachoblow"><img src="images/instagram-icon-160.png" width="20"></a>
+          <a class="nav-option" href="https://www.instagram.com/chachoblow"><img src="images/instagram-icon-160.png" width="20" alt="Hand drawn icon for Instagram."></a>
         </div>
       </nav>
         
