--- a/illustrations.html
+++ b/illustrations.html
@@ -13,7 +13,7 @@
     <body>
       <nav class="sidenav">
         <div class="nav-title-container">
-          <a href="index.html"><img id="title-image" src="images/my-eyes-name.png"></a>
+          <a href="index.html"><img id="title-image" src="images/my-eyes-name.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
         </div>
         <div class="nav-main-container">
           <button class="dropdown-btn nav-option">comics</button>
@@ -34,14 +34,14 @@
       </nav>
 
       <main class="content">
-        <img class="responsive" src="images/illustrations/can-you-hear-me-1800h.jpg">
-        <img class="responsive" src="images/illustrations/fried-1381h.jpg">
-        <img class="responsive" src="images/illustrations/breaking-bad-1500h.jpg">
-        <img class="responsive" src="images/illustrations/bat-person-1080h.png">
-        <img class="responsive" src="images/illustrations/yellow-vision-1800h.jpg">
-        <img class="responsive" src="images/illustrations/man-rock-900h.png">
-        <img class="responsive" src="images/illustrations/woman-cursive-900h.png">
-        <img class="responsive" src="images/illustrations/me-final-1080h.jpg">
+        <img class="responsive" src="images/illustrations/can-you-hear-me-1800h.jpg" alt="Illustration of a man with a headset and the phrases 'Can you hear me?' and 'Can I hear me?'">
+        <img class="responsive" src="images/illustrations/fried-1381h.jpg" alt="Illustration of an older man taking a selfie.">
+        <img class="responsive" src="images/illustrations/breaking-bad-1500h.jpg" alt="Illustration of a face with two men in jumpsuits next to him.">
+        <img class="responsive" src="images/illustrations/bat-person-1080h.png" alt="Illustration of a woman holding a bat in a desert.">
+        <img class="responsive" src="images/illustrations/yellow-vision-1800h.jpg" alt="Illustration of a man standing on a square landscape with yellow rays coming out of his eyes.">
+        <img class="responsive" src="images/illustrations/man-rock-900h.png" alt="Illustration of a man merging with a rock.">
+        <img class="responsive" src="images/illustrations/woman-cursive-900h.png" alt="Illustration of a woman with a necklace.">
+        <img class="responsive" src="images/illustrations/me-final-1080h.jpg" alt="Illustration of Wesley Klein.">
       </main>
       <script src="dropdown.js"></script>
     </body>
