--- a/photo.html
+++ b/photo.html
@@ -13,7 +13,7 @@
     <body>
       <nav class="sidenav">
         <div class="nav-title-container">
-          <a href="index.html"><img id="title-image" src="images/my-eyes-name.png"></a>
+          <a href="index.html"><img id="title-image" src="images/my-eyes-name.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
         </div>
         <div class="nav-main-container">
           <button class="dropdown-btn nav-option">comics</button>
@@ -34,18 +34,18 @@
       </nav>
 
       <main class="content">
-        <img class="responsive" src="images/photographs/brittany-driving-1000h.JPG">
-        <img class="responsive" src="images/photographs/grapevine-1000h.JPG">
-        <img class="responsive" src="images/photographs/me-bathroom-1000h.JPG">
-        <img class="responsive" src="images/photographs/dad-grandpa-1000h.JPG">
-        <img class="responsive" src="images/photographs/grandparents-window-1000h.JPG">
-        <img class="responsive" src="images/photographs/grandma-chandelier-1000h.JPG">
-        <img class="responsive" src="images/photographs/megan-dad-2-1000h.JPG">
-        <img class="responsive" src="images/photographs/slit-scanning-1-1000h.JPG">
-        <img class="responsive" src="images/photographs/slit-scanning-2-1000h.JPG">
-        <img class="responsive" src="images/photographs/laguna-ripples-1000h.JPG">
-        <img class="responsive" src="images/photographs/laguna-algea-1000h.JPG">
-        <img class="responsive" src="images/photographs/laguna-rock-1000h.JPG">
+        <img class="responsive" src="images/photographs/brittany-driving-1000h.JPG" alt="Photograph of a woman driving on a highway.">
+        <img class="responsive" src="images/photographs/grapevine-1000h.JPG" alt="Photograph of a rainy highway, taken from the perspective of the passenger seat.">
+        <img class="responsive" src="images/photographs/me-bathroom-1000h.JPG" alt="Photograph that Wesley Klein took of himself. He is standing in front of a mirror.">
+        <img class="responsive" src="images/photographs/dad-grandpa-1000h.JPG" alt="Photograph of a man and his father sitting in chairs.">
+        <img class="responsive" src="images/photographs/grandparents-window-1000h.JPG" alt="Photograph of a woman through a window.">
+        <img class="responsive" src="images/photographs/grandma-chandelier-1000h.JPG" alt="Photograph of a woman sitting at a table.">
+        <img class="responsive" src="images/photographs/megan-dad-2-1000h.JPG" alt="Photograph of a woman and her father sitting at a table.">
+        <img class="responsive" src="images/photographs/slit-scanning-1-1000h.JPG" alt="A slit scan photograph of Wesley Klein.">
+        <img class="responsive" src="images/photographs/slit-scanning-2-1000h.JPG" alt="A slit scan photgraph of Wesley Klein.">
+        <img class="responsive" src="images/photographs/laguna-ripples-1000h.JPG" alt="Photograph of rocks under water at the beach.">
+        <img class="responsive" src="images/photographs/laguna-algea-1000h.JPG" alt="Photograph of an algea pool at the beach.">
+        <img class="responsive" src="images/photographs/laguna-rock-1000h.JPG" alt="Photograph of a rock in the sand at the beach.">
       </main>
       <script src="dropdown.js"></script>
     </body>
