Adding responsive image sizes.

--- a/about-me.html
+++ b/about-me.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
+    <link rel="shortcut icon" href="images/eyes-icon.ico" type="image/x-icon">
       <title>wesley klein - me</title>
       <meta name="author" content="Wesley Klein">
       <meta name="desciption" content="Information regarding Wesley Klein. This includes a resume, likes, interests, hopes, and other stuff yet to be thought of.">
