--- a/blog.html
+++ b/blog.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
+    <link rel="shortcut icon" href="images/eyes-icon.ico" type="image/x-icon">
       <title>wesley klein - blog</title>
       <meta name="author" content="Wesley Klein">
       <meta name="desciption" content="Blog of Wesley Klein">
