--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html class="indexpage" lang="en-US">
   <head>
     <meta charset="utf-8">
+    <link rel="shortcut icon" href="images/eyes-icon.ico" type="image/x-icon">
     <title>wesley klein</title>
       <meta name="author" content="Wesley Klein">
       <meta name="desciption" content="The website of Wesley Klein. Here, his various projects, illustrations, comics, and photographs are hosted for your viewing pleasure.">
@@ -13,7 +14,7 @@
     <body>
       <nav class="sidenav">
         <div class="nav-title-container">
-          <a href="index.html"><img id="title-image" src="images/my-eyes-name.png"></a>
+          <a href="index.html"><img id="title-image" src="images/my-eyes-name.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
         </div>
         <div class="nav-main-container">
           <button class="dropdown-btn nav-option">comics</button>
