--- a/web/lifesimulator.html
+++ b/web/lifesimulator.html
@@ -2,6 +2,7 @@
 <html class="indexpage" lang="en-US">
   <head>
     <meta charset="utf-8">
+    <link rel="shortcut icon" href="images/eyes-icon.ico" type="image/x-icon">
     <title>wesley klein - life simulator</title>
       <meta name="author" content="Wesley Klein">
       <meta name="desciption" content="The website of Wesley Klein. Here, his various projects, illustrations, comics, and photographs are hosted for your viewing pleasure.">
