--- a/comics/cyclux.html
+++ b/comics/cyclux.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
+    <link rel="shortcut icon" href="images/eyes-icon.ico" type="image/x-icon">
       <title>wesley klein - cyclux</title>
       <meta name="author" content="Wesley Klein">
       <meta name="desciption" content="Collection of comics made by Wesley Klein.">
