--- a/photo.html
+++ b/photo.html
@@ -2,6 +2,7 @@
 <html class="photopage" lang="en-US">
   <head>
     <meta charset="utf-8">
+    <link rel="shortcut icon" href="images/eyes-icon.ico" type="image/x-icon">
       <title>wesley klein - photo</title>
       <meta name="author" content="Wesley Klein">
       <meta name="desciption" content="Collection of photographs taken by Wesley Klein.">
