Responsive image sizes

--- a/illustrations.html
+++ b/illustrations.html
@@ -35,7 +35,17 @@
       </nav>
 
       <main class="content">
-        <img class="responsive" src="images/illustrations/can-you-hear-me-1800h.jpg" alt="Illustration of a man with a headset and the phrases 'Can you hear me?' and 'Can I hear me?'">
+        <img class="responsive" 
+             srcset="images/illustrations/can-you-hear-me-375w.jpg 375w,
+                     images/illustrations/can-you-hear-me-480w.jpg 480w,
+                     images/illustrations/can-you-hear-me-850w.jpg 850w,
+                     images/illustrations/can-you-hear-me-1800h.jpg 1328w" 
+             sizes="(max-width: 375px) 375px,
+                    (max-width: 480px) 480px,
+                    (max-width: 850px) 850px,
+                    1328px" 
+             src="images/illustrations/can-you-hear-me-1800h.jpg"  
+             alt="Illustration of a man with a headset and the phrases 'Can you hear me?' and 'Can I hear me?'">
         <img class="responsive" src="images/illustrations/fried-1381h.jpg" alt="Illustration of an older man taking a selfie.">
         <img class="responsive" src="images/illustrations/breaking-bad-1500h.jpg" alt="Illustration of a face with two men in jumpsuits next to him.">
         <img class="responsive" src="images/illustrations/bat-person-1080h.png" alt="Illustration of a woman holding a bat in a desert.">
