Adding responsive image sizes

--- a/illustrations.html
+++ b/illustrations.html
@@ -46,13 +46,75 @@
                     1328px" 
              src="images/illustrations/can-you-hear-me-1800h.jpg"  
              alt="Illustration of a man with a headset and the phrases 'Can you hear me?' and 'Can I hear me?'">
-        <img class="responsive" src="images/illustrations/fried-1381h.jpg" alt="Illustration of an older man taking a selfie.">
-        <img class="responsive" src="images/illustrations/breaking-bad-1500h.jpg" alt="Illustration of a face with two men in jumpsuits next to him.">
-        <img class="responsive" src="images/illustrations/bat-person-1080h.png" alt="Illustration of a woman holding a bat in a desert.">
-        <img class="responsive" src="images/illustrations/yellow-vision-1800h.jpg" alt="Illustration of a man standing on a square landscape with yellow rays coming out of his eyes.">
-        <img class="responsive" src="images/illustrations/man-rock-900h.png" alt="Illustration of a man merging with a rock.">
-        <img class="responsive" src="images/illustrations/woman-cursive-900h.png" alt="Illustration of a woman with a necklace.">
-        <img class="responsive" src="images/illustrations/me-final-1080h.jpg" alt="Illustration of Wesley Klein.">
+        <img class="responsive"
+             srcset="images/illustrations/fried-375w.jpg 375w,
+                     images/illustrations/fried-480w.jpg 480w,
+                     images/illustrations/fried-850w.jpg 850w,
+                     images/illustrations/fried-1381h.jpg 1800w"
+             sizes="(max-width: 375px) 375px,
+                    (max-width: 480px) 480px,
+                    (max-width: 850px) 850px,
+                    1800px" 
+             src="images/illustrations/fried-1381h.jpg" 
+             alt="Illustration of an older man taking a selfie.">
+        <img class="responsive" 
+             srcset="images/illustrations/breaking-bad-375w.jpg 375w,
+                     images/illustrations/breaking-bad-480w.jpg 480w,
+                     images/illustrations/breaking-bad-850w.jpg 850w,
+                     images/illustrations/breaking-bad-1500h.jpg 2000w"
+             sizes="(max-width: 375px) 375px,
+                    (max-width: 480px) 480px,
+                    (max-width: 850px) 850px,
+                    2000px"
+             src="images/illustrations/breaking-bad-1500h.jpg" 
+             alt="Illustration of a face with two men in jumpsuits next to him.">
+        <img class="responsive" 
+             srcset="images/illustrations/bat-person-375w.png 375w,
+                     images/illustrations/bat-person-480w.png 480w,
+                     images/illustrations/bat-person-1080h.png 742w"
+             sizes="(max-width: 375px) 375px,
+                    (max-width: 480px) 480px,
+                    742px"
+             src="images/illustrations/bat-person-1080h.png" 
+             alt="Illustration of a woman holding a bat in a desert.">
+        <img class="responsive" 
+             srcset="images/illustrations/yellow-vision-375w.jpg 375w,
+                     images/illustrations/yellow-vision-480w.jpg 480w,
+                     images/illustrations/yellow-vision-850w.jpg 850w,
+                     images/illustrations/yellow-vision-1800h.jpg 1350w"
+             sizes="(max-width: 375px) 375px,
+                    (max-width: 480px) 480px,
+                    (max-width: 850px) 850px,
+                    1350px"
+             src="images/illustrations/yellow-vision-1800h.jpg" 
+             alt="Illustration of a man standing on a square landscape with yellow rays coming out of his eyes.">
+        <img class="responsive" 
+             srcset="images/illustrations/man-rock-375w.png 375w,
+                     images/illustrations/man-rock-480w.png 480w,
+                     images/illustrations/man-rock-900h.png 675w"
+             sizes="(max-width: 375px) 375px,
+                    (max-width: 480px) 480px,
+                    675px"
+             src="images/illustrations/man-rock-900h.png" 
+             alt="Illustration of a man merging with a rock.">
+        <img class="responsive"
+             srcset="images/illustrations/woman-cursive-375w.png 375w,
+                     images/illustrations/woman-cursive-480w.png 480w,
+                     images/illustrations/woman-cursive-900h.png 675w"
+             sizes="(max-width: 375px) 375px,
+                    (max-width: 480px) 480px,
+                    675px"
+             src="images/illustrations/woman-cursive-900h.png" 
+             alt="Illustration of a woman with a necklace.">
+        <img class="responsive" 
+             srcset="images/illustrations/me-final-375w.jpg 375w,
+                     images/illustrations/me-final-480w.jpg 480w,
+                     images/illustrations/me-final-1080h.jpg 817w"
+             sizes="(max-width: 375px) 375px,
+                    (max-width: 480px) 480px,
+                    817px"
+             src="images/illustrations/me-final-1080h.jpg" 
+             alt="Illustration of Wesley Klein.">
       </main>
       <script src="dropdown.js"></script>
     </body>
