--- a/web/crisscross.html
+++ b/web/crisscross.html
@@ -31,6 +31,7 @@
             <a class="nav-option" href="crisscross.html">criss cross</a>
           </div>
           <a class="nav-option" href="../about-me.html">about</a>
+          <a class="nav-option" href="webvr.html">webvr</a>
         </div>
       </nav>
 
