--- a/webvr.html
+++ b/webvr.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html class="indexpage" lang="en-US">
+<html lang="en-US">
   <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="images/eyes-icon.ico" type="image/x-icon">
-    <title>wesley klein</title>
+      <title>wesley klein - blog</title>
       <meta name="author" content="Wesley Klein">
-      <meta name="desciption" content="The website of Wesley Klein. Here, his various projects, illustrations, comics, and photographs are hosted for your viewing pleasure.">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="desciption" content="Blog of Wesley Klein">
       <link rel="stylesheet" href="style.css">
       <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif" rel="stylesheet">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
@@ -19,24 +19,21 @@
         <div class="nav-main-container">
           <button class="dropdown-btn nav-option">comics</button>
           <div class="dropdown-container">
-            <a class="nav-option" href="comics/cyclux.html">cyclux</a>
-            <a class="nav-option" href="comics/branches.html">branches</a>
+            <a class="nav-option" href="cyclux.html">cyclux</a>
           </div>
           <a class="nav-option" href="illustrations.html">illustrations</a>
           <a class="nav-option" href="photo.html">photo</a>
-          <button class="dropdown-btn nav-option">web</button>
-          <div class="dropdown-container">
-            <a class="nav-option" href="web/arrangewatch.html">arrange and watch</a>
-            <a class="nav-option" href="web/lifesimulator.html">life simulator</a>
-            <a class="nav-option" href="web/crisscross.html">criss cross</a>
-          </div>
           <a class="nav-option" href="about-me.html">about</a>
           <a class="nav-option" href="webvr.html">webvr</a>
         </div>
+        
+        <div class="icon-bar">
+          <a class="nav-option" href="https://www.instagram.com/chachoblow"><img src="images/instagram-icon-160.png" width="20" alt="Hand drawn icon for Instagram."></a>
+        </div>
       </nav>
-
+        
       <main class="content">
-
+            <a class="content-link" href="webvr_ballshooter.html">click here to try my web vr project</a>
       </main>
       <script src="dropdown.js"></script>
     </body>
