--- a/web/arrangewatch.html
+++ b/web/arrangewatch.html
@@ -31,7 +31,7 @@
             <a class="nav-option" href="crisscross.html">criss cross</a>
           </div>
           <a class="nav-option" href="../about-me.html">about</a>
-          <a class="nav-option" href="webvr.html">webvr</a>
+          <a class="nav-option" href="contact.html">contact</a>
         </div>
       </nav>
 
