--- a/blog.html
+++ b/blog.html
@@ -17,27 +17,73 @@
           <a href="index.html"><img id="title-image" src="images/my-eyes-name.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
         </div>
         <div class="nav-main-container">
-          <button class="dropdown-btn nav-option">comics</button>
+          <button class="dropdown-btn nav-option" style="letter-spacing: 0.95em;">artwork</button>
           <div class="dropdown-container">
-            <a class="nav-option" href="cyclux.html">cyclux</a>
+            <button class="dropdown-btn nav-option" style="letter-spacing: 1.445em;">comics</button>
+            <div class="dropdown-container">
+              <a class="nav-option" href="artwork/cyclux.html" style="letter-spacing: 1.5em;">cyclux</a>
+              <a class="nav-option" href="artwork/branches.html" style="letter-spacing: 0.886em;">branches</a>
+            </div>
+            <a class="nav-option" href="artwork/illustrations.html" style="letter-spacing: 0.444em;">illustrations</a>
+            <a class="nav-option" href="artwork/animations.html" style="letter-spacing: 0.607em;">animations</a>
+            <a class="nav-option" href="artwork/photo.html" style="letter-spacing: 1.9489em;">photo</a>
           </div>
-          <a class="nav-option" href="illustrations.html">illustrations</a>
-          <a class="nav-option" href="photo.html">photo</a>
-          <a class="nav-option" href="blog.html">blog</a>
-          <a class="nav-option" href="about-me.html">about</a>
-        </div>
-        
-        <div class="icon-bar">
-          <a class="nav-option" href="https://www.instagram.com/chachoblow"><img src="images/instagram-icon-160.png" width="20" alt="Hand drawn icon for Instagram."></a>
+          <button class="dropdown-btn nav-option" style="letter-spacing: 0.785em;">projects</button>
+          <div class="dropdown-container">
+            <a class="nav-option" href="projects/linecollection.html" style="letter-spacing: 0.31em;">line collection</a>
+            <a class="nav-option" href="projects/lifesimulator.html" style="letter-spacing: 0.353em;">life simulator</a>
+            <a class="nav-option" href="projects/processing-sketches.html" style="letter-spacing: 0.068em;">processing sketches</a>
+          </div>
+          <a class="nav-option" href="#" style="letter-spacing: 2.362em;">blog</a>
+          <a class="nav-option" href="about-me.html" style="letter-spacing: 1.59em;">about</a>
         </div>
       </nav>
         
       <main class="content">
         <div class="blogpost">
-          <h2>Under construction</h2>
-          <p>Posts coming soon. </p>
+          <h1>Goals Moving Forward</h1>
+          <h2>February 8, 2018</h2>
+          <p>It always amazes me how much sound we tune out. Actually, not even tune out since tuning out 
+            requires an initial acknowledgment. Much of the sounds wouldn’t have ever existed for me if I 
+            were not purposefully listening for them. We do this with all of our senses, but for me, it 
+            seems to happen most with sound. 
+          </p>
+          <p>It was also hard to listen without attaching meaning to what I was hearing. For instance, if 
+            I heard the screeching of masking tape being unrolled, I immediately considered how someone 
+            was packing up something. Or if I heard the rustle of leaves, I thought how they must have 
+            fallen off of a tree, and were now skipping across the ground. Everything I heard was 
+            immediately categorized, given a name, and then rather than considering the sound itself, I 
+            considered what was making that sound.
+          </p>
+          <p>It was hard to get to a point were I simply took in the sounds and let them speak for 
+            themselves. In fact, I don’t think I ever truly did that. I think that it would be really 
+            interesting to get to a point where you were able to take in sound as a pure form, but also
+            unsettling in a way. 
+          </p>
+        </div>
+        <div class="blogpost">
+          <h1>Goals Moving Forward</h1>
+          <h2>February 8, 2018</h2>
+          <p>It always amazes me how much sound we tune out. Actually, not even tune out since tuning out 
+            requires an initial acknowledgment. Much of the sounds wouldn’t have ever existed for me if I 
+            were not purposefully listening for them. We do this with all of our senses, but for me, it 
+            seems to happen most with sound. 
+          </p>
+          <p>It was also hard to listen without attaching meaning to what I was hearing. For instance, if 
+            I heard the screeching of masking tape being unrolled, I immediately considered how someone 
+            was packing up something. Or if I heard the rustle of leaves, I thought how they must have 
+            fallen off of a tree, and were now skipping across the ground. Everything I heard was 
+            immediately categorized, given a name, and then rather than considering the sound itself, I 
+            considered what was making that sound.
+          </p>
+          <img class="responsive" src="../images/photographs/brittany-driving-1000h.JPG" alt="Photograph of a woman driving on a highway.">
+          <p>It was hard to get to a point were I simply took in the sounds and let them speak for 
+            themselves. In fact, I don’t think I ever truly did that. I think that it would be really 
+            interesting to get to a point where you were able to take in sound as a pure form, but also
+            unsettling in a way. 
+          </p>
         </div>
       </main>
-      <script src="dropdown.js"></script>
+      <script src="js/dropdown.js"></script>
     </body>
 </html>
