--- a/index.html
+++ b/index.html
@@ -17,26 +17,31 @@
           <a href="index.html"><img id="title-image" src="images/my-eyes-name.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
         </div>
         <div class="nav-main-container">
-          <button class="dropdown-btn nav-option">comics</button>
+          <button class="dropdown-btn nav-option" style="letter-spacing: 0.95em;">artwork</button>
           <div class="dropdown-container">
-            <a class="nav-option" href="comics/cyclux.html">cyclux</a>
-            <a class="nav-option" href="comics/branches.html">branches</a>
+            <button class="dropdown-btn nav-option" style="letter-spacing: 1.445em;">comics</button>
+            <div class="dropdown-container">
+              <a class="nav-option" href="artwork/cyclux.html" style="letter-spacing: 1.5em;">cyclux</a>
+              <a class="nav-option" href="artwork/branches.html" style="letter-spacing: 0.886em;">branches</a>
+            </div>
+            <a class="nav-option" href="artwork/illustrations.html" style="letter-spacing: 0.444em;">illustrations</a>
+            <a class="nav-option" href="artwork/animations.html" style="letter-spacing: 0.607em;">animations</a>
+            <a class="nav-option" href="artwork/photo.html" style="letter-spacing: 1.9489em;">photo</a>
           </div>
-          <a class="nav-option" href="illustrations.html">illustrations</a>
-          <a class="nav-option" href="photo.html">photo</a>
-          <button class="dropdown-btn nav-option">web</button>
+          <button class="dropdown-btn nav-option" style="letter-spacing: 0.785em;">projects</button>
           <div class="dropdown-container">
-            <a class="nav-option" href="web/arrangewatch.html">arrange and watch</a>
-            <a class="nav-option" href="web/lifesimulator.html">life simulator</a>
-            <a class="nav-option" href="web/crisscross.html">criss cross</a>
+            <a class="nav-option" href="projects/linecollection.html" style="letter-spacing: 0.31em;">line collection</a>
+            <a class="nav-option" href="projects/lifesimulator.html" style="letter-spacing: 0.353em;">life simulator</a>
+            <a class="nav-option" href="projects/processing-sketches.html" style="letter-spacing: 0.068em;">processing sketches</a>
           </div>
-          <a class="nav-option" href="about-me.html">about</a>
+          <a class="nav-option" href="blog.html" style="letter-spacing: 2.362em;">blog</a>
+          <a class="nav-option" href="about-me.html" style="letter-spacing: 1.59em;">about</a>
         </div>
       </nav>
 
       <main class="content">
         
       </main>
-      <script src="dropdown.js"></script>
+      <script src="js/dropdown.js"></script>
     </body>
 </html>
