--- a/blog.html
+++ b/blog.html
@@ -41,6 +41,8 @@
         
       <main class="content">
         <div class="blogpost">
+          <h1>Under construction</h1>
+          <p>Coming soon.</p>
           <!--
           <h1>Goals Moving Forward</h1>
           <h2>February 8, 2018</h2>
