--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         </div>
       </nav>
 
-      <main class="content">
-        
+      <main class="content" id="content-window" style="margin: 0; margin-left: 300px; height: 99vh;">
+          <iframe src="https://editor.p5js.org/chachoblow/embed/FD_EmxcBF" style="width: 100%; height: 100%; border-style: none;"></iframe>
       </main>
       <script src="js/dropdown.js"></script>
     </body>
