--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
       </nav>
 
-      <main class="content" id="content-window" style="margin: 0; margin-left: 250px; height: 99.5vh;">
+      <main class="content" id="sketch-container">
         <iframe src="https://editor.p5js.org/chachoblow/embed/AEuGouJYL" style="width: 100%; height: 100%; border-style: none;"></iframe>
       </main>
       <script src="js/dropdown.js"></script>
