Initial commit on branch.

--- a/blog.html
+++ b/blog.html
@@ -38,6 +38,62 @@
           <a class="nav-option" href="about-me.html" style="letter-spacing: 1.59em;">about</a>
         </div>
       </nav>
+
+      <nav class="topnav" id="myTopnav">
+        <a href="../index.html" class="logo"><img id="title-image" src="../images/my-eyes-name.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
+        <div class="nav-main-container">
+          <button class="dropdown-btn nav-option" style="letter-spacing: 0.95em;">artwork</button>
+          <div class="dropdown-container clicked">
+            <button class="dropdown-btn nav-option" style="letter-spacing: 0.845em;">comics</button>
+            <div class="dropdown-container">
+              <a class="nav-option" href="cyclux.html" style="letter-spacing: 0.55em;">cyclux</a>
+              <a class="nav-option" href="branches.html" style="letter-spacing: 0.2em;">branches</a>
+            </div>
+            <a class="nav-option active" href="#" style="letter-spacing: 0.195em;">illustrations</a>
+            <a class="nav-option" href="animations.html" style="letter-spacing: 0.274em;">animations</a>
+            <a class="nav-option" href="photo.html" style="letter-spacing: 1.2em;">photo</a>
+          </div>
+          <button class="dropdown-btn nav-option" style="letter-spacing: 0.785em;">projects</button>
+          <div class="dropdown-container">
+            <a class="nav-option" href="../projects/linecollection.html" style="letter-spacing: 0.09em;">line collection</a>
+            <a class="nav-option" href="../projects/lifesimulator.html" style="letter-spacing: 0.115em;">life simulator</a>
+            <a class="nav-option" href="../projects/processing-sketches.html" style="letter-spacing: -0.105em;">processing sketches</a>
+          </div>
+          <a class="nav-option" href="../blog.html" style="letter-spacing: 2.362em;">blog</a>
+          <a class="nav-option" href="../about-me.html" style="letter-spacing: 1.59em;">about</a>
+        </div>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </nav>
+
+      <nav class="topnav" id="myTopnav">
+        <a href="../index.html" class="logo"><img id="title-image" src="../images/my-eyes-name.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
+        <div class="nav-main-container">
+          <button class="dropdown-btn nav-option" style="letter-spacing: 0.95em;">artwork</button>
+          <div class="dropdown-container">
+            <button class="dropdown-btn nav-option" style="letter-spacing: 0.845em;">comics</button>
+            <div class="dropdown-container">
+              <a class="nav-option" href="cyclux.html" style="letter-spacing: 0.55em;">cyclux</a>
+              <a class="nav-option" href="branches.html" style="letter-spacing: 0.2em;">branches</a>
+            </div>
+            <a class="nav-option" href="#" style="letter-spacing: 0.195em;">illustrations</a>
+            <a class="nav-option" href="animations.html" style="letter-spacing: 0.274em;">animations</a>
+            <a class="nav-option" href="photo.html" style="letter-spacing: 1.2em;">photo</a>
+          </div>
+          <button class="dropdown-btn nav-option" style="letter-spacing: 0.785em;">projects</button>
+          <div class="dropdown-container">
+            <a class="nav-option" href="../projects/linecollection.html" style="letter-spacing: 0.09em;">line collection</a>
+            <a class="nav-option" href="../projects/lifesimulator.html" style="letter-spacing: 0.115em;">life simulator</a>
+            <a class="nav-option" href="../projects/processing-sketches.html" style="letter-spacing: -0.105em;">processing sketches</a>
+          </div>
+          <a class="nav-option active" href="../blog.html" style="letter-spacing: 2.362em;">blog</a>
+          <a class="nav-option" href="../about-me.html" style="letter-spacing: 1.59em;">about</a>
+        </div>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </nav>
         
       <main class="content">
         <div class="blogpost">
@@ -89,5 +145,6 @@
         </div>
       </main>
       <script src="js/dropdown.js"></script>
+      <script src="js/mobile-menu.js"></script>
     </body>
 </html>
